apache-service2.yml
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  selector:
    app: apache
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
