ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks2
  annotations:
    kubernetes.io/tls-acme: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: apache.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
